# oocana-python

./: .flake8  .gitignore  LICENSE  README.md  READM_zh.md  publish.md  pyproject.toml  readme.md
.github/: .release-please-manifest.json  release-please-config.json
.github/actions/oocana-python/: action.yml
.github/actions/ovmlayer/: action.yml
.github/workflows/: layer.yml  manual.yml  oocana-python.yml  pr.yml  publish.yml  release-please.yml
broker/: main.py
docs/: debug.md
example/: README.md  demo.js  flow.oo.yaml  package.json  pnpm-lock.yaml
example/blocks/app_a/: main.py
example/blocks/blk_a/: block.oo.yaml  index.py
example/blocks/blk_b/: block.oo.yaml  index.py
example/blocks/blk_c/: index.py
executor/: CHANGELOG.md  applet.py  bin.py  ctx.py  func.py  mainframe.py  matplotlib_oomol.py  package.json  pyproject.toml
executor/impl/: applet.py  block.py  context.py  data.py  executor.py
executor/python_executor/: applet.py  block.py  context.py  credential.py  data.py  executor.py  hook.py  matplot_helper.py  secret.py  service.py  topic.py  utils.py
executor/python_executor/matplot/: oomol_matplot_helper.py
executor/python_executor/matplot/matplotlib_oomol/: oomol.py
executor/python_executor/matplotlib_oomol/: oomol.py
executor/tests/: test_cli.py  test_load_module_dict.py  test_secret.py
executor/tests/test_files/: to_run_file.py
flow-examples/: .gitignore  README.md  demo.mjs  package.json  package.oo.yaml  tsconfig.json
flow-examples/blocks/blk_b/: index.py
flow-examples/blocks/blk_c/: index.py
flow-examples/blocks/blk_d/: index.py
flow-examples/blocks/blk_e/: index.py
flow-examples/blocks/blk_j/: main.py
flow-examples/flows/basic/: flow.oo.yaml
flow-examples/flows/exit/: flow.oo.yaml
flow-examples/flows/global/: flow.oo.yaml
flow-examples/flows/layer/: flow.oo.yaml
flow-examples/flows/multiple/: flow.oo.yaml
flow-examples/flows/path/: README.md  flow.oo.yaml
flow-examples/flows/plotly/: flow.oo.yaml
flow-examples/flows/query-downstream/: flow.oo.yaml
flow-examples/flows/render/: flow.oo.yaml
flow-examples/flows/secret/: flow.oo.yaml
flow-examples/test/: flow.test.ts
oocana/: CHANGELOG.md  README.md  __init__.py  package.json  pyproject.toml  read_version.py
oocana/oocana/: __init__.py  applet.py  context.py  credential.py  data.py  handle.py  handle_data.py  internal.py  mainframe.py  mainframe_test.py  preview.py  schema.py  serialization.py  service.py  throtter.py
oocana/tests/: test_context.py  test_data.py  test_handle.py  test_handle_data.py  test_mainframe.py  test_mainframe_callbacks.py  test_mainframe_notify.py  test_performance.py  test_serialization.py  test_throtter.py
scripts/: executor.sh  install-python.sh  layer.py  make_npm_package.js  make_oocana_npm_package.js  package.json  publish_executor.sh  publish_npm.sh  publish_oocana.sh  read_version.py  sync_version.js
src/oocana/: __init__.py  _core.py  applet.py  context.py  data.py  func.py  mainframe.py  sdk.py
src/oocana_python/: __init__.py
src/vocana/: __init__.py  _core.py  argv.py  data.py  mainframe.py  mainframe_test.py  sdk.py
test/: .gitignore  README.md  broker.mjs  demo.mjs  flow.oo.yaml  package.json  pnpm-lock.yaml
vocana/: _core.py  argv.py  mainframe.py  sdk.py
(+82 files in other folders)
