
[project]
name = "oocana-python"
version = "0.6.0"
description = ""
authors = [
    {name = "l1shen", email = "lishen1635@gmail.com"},
    {name = "yleaf", email = "11785335+leavesster@users.noreply.github.com"},
]
dependencies = [
    "paho-mqtt>=2",
    "pyright>=1.1.362",
]
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"

[tool.pdm]
distribution = true
[tool.pdm.scripts]
publish_oocana = { shell = "./scripts/publish_oocana.sh" }
publish_executor = { shell = "./scripts/publish_executor.sh" }
check = { shell = "pdm run pyright ./src ./executor" }

[tool.pdm.dev-dependencies]
dev = [
    "amqtt>=0.11.0b1",
    "setuptools>=68.0.0",
]
[tool.setuptools.packages.find]
where = ["src"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
