
[project]
name = "oocana-python"
version = "0.0.0"
description = ""
authors = [
    {name = "l1shen", email = "lishen1635@gmail.com"},
    {name = "yleaf", email = "11785335+leavesster@users.noreply.github.com"},
]

requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
]

[tool.pdm.scripts]
publish_oocana = { shell = "cd oocana && pdm publish" }
publish_executor = { shell = "cd executor && pdm publish" }
check = { shell = "pdm run pyright ./oocana ./executor" }
build_all = { shell = "(cd oocana && pdm build) && (cd executor && pdm build)" }
test = { shell = "pdm run pytest ./oocana ./executor" }

[tool.pdm.dev-dependencies]
dev = [
    "-e oocana @ file:///${PROJECT_ROOT}/oocana",
    "-e python-executor @ file:///${PROJECT_ROOT}/executor",
    "pyright>=1.1.370",
    "pytest>=8.3.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
